// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductOverview component renders correctly with Recaptcha 1`] = `
<div>
  <div
    class="ProductOverview"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root Grid-item-44 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-8"
      >
        <div
          class="MediaGallery-root-46"
        >
          <div
            class="MediaGallery-imageWrapper-47"
          >
            <img
              class="MediaGallery-mainImageWrapper-50 MediaGallery-mainImageWrappershort-53 Media-root-85 Media-contain-86"
              src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
            />
            <div
              class="MediaGallery-caption-48"
            >
              <p
                class="MuiTypography-root MediaGallery-captionText-49 Typography-root-71 MuiTypography-h6"
                data-testid="typography"
              >
                <span
                  class="LinesEllipsis  Truncate-root-87"
                >
                  This is image caption
                  <wbr />
                </span>
              </p>
            </div>
          </div>
          <div
            class="Thumbnails-root-88"
            data-testid="thumbnails-root"
          >
            <button
              aria-label="Scroll left"
              class="MuiButtonBase-root Thumbnails-thumbScroller-89 Thumbnails-thumbScrollerLeft-90 ThumbScrollerButton-root-98 ThumbScrollerButton-left-99"
              data-testid="thumbnail-scroller-left"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root ThumbScrollerButton-icon-101"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="Scroll right"
              class="MuiButtonBase-root Thumbnails-thumbScroller-89 Thumbnails-thumbScrollerRight-91 Thumbnails-thumbScrollerHidden-92 ThumbScrollerButton-root-98 ThumbScrollerButton-right-100"
              data-testid="thumbnail-scroller-right"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root ThumbScrollerButton-icon-101"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              class="Thumbnails-scroller-93"
              data-testid="thumbnail-scroller"
              style="margin-right: 0%;"
            >
              <button
                class="MuiButtonBase-root Thumbnails-thumbnail-94 Thumbnail-root-102 Thumbnail-selected-104 Thumbnail-large-105 Thumbnail-selected-104"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"undefined\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg\\"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <img
                  class="Media-root-85"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
              </button>
              <button
                class="MuiButtonBase-root Thumbnails-thumbnail-94 Thumbnail-root-102 Thumbnail-large-105"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"undefined\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg\\"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <img
                  class="Media-root-85"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root Thumbnails-thumbnail-94 Thumbnail-root-102 Thumbnail-large-105"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"test video\\",\\"action\\":\\"[object Object]\\"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root Thumbnail-playIcon-107"
                  data-testid="thumbnail-play-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 5v14l11-7z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-44 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ProductOverviewPane-root-58"
        >
          <h1
            class="MuiTypography-root ProductOverviewPane-heading-60 Typography-root-71 MuiTypography-h3"
            data-testid="typography"
          >
            name
          </h1>
          <ul
            class="ProductOverviewPane-attributes-61"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
        <p
          class="MuiTypography-root keyAssetTypesDownload Typography-root-71 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-79 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-79 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductOverview component renders correctly without Recaptcha 1`] = `
<div>
  <div
    class="ProductOverview"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root Grid-item-109 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-8"
      >
        <div
          class="MediaGallery-root-111"
        >
          <div
            class="MediaGallery-imageWrapper-112"
          >
            <img
              class="MediaGallery-mainImageWrapper-115 MediaGallery-mainImageWrappershort-118 Media-root-144 Media-contain-145"
              src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
            />
            <div
              class="MediaGallery-caption-113"
            >
              <p
                class="MuiTypography-root MediaGallery-captionText-114 Typography-root-136 MuiTypography-h6"
                data-testid="typography"
              >
                <span
                  class="LinesEllipsis  Truncate-root-146"
                >
                  This is image caption
                  <wbr />
                </span>
              </p>
            </div>
          </div>
          <div
            class="Thumbnails-root-147"
            data-testid="thumbnails-root"
          >
            <button
              aria-label="Scroll left"
              class="MuiButtonBase-root Thumbnails-thumbScroller-148 Thumbnails-thumbScrollerLeft-149 ThumbScrollerButton-root-157 ThumbScrollerButton-left-158"
              data-testid="thumbnail-scroller-left"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root ThumbScrollerButton-icon-160"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              aria-label="Scroll right"
              class="MuiButtonBase-root Thumbnails-thumbScroller-148 Thumbnails-thumbScrollerRight-150 Thumbnails-thumbScrollerHidden-151 ThumbScrollerButton-root-157 ThumbScrollerButton-right-159"
              data-testid="thumbnail-scroller-right"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root ThumbScrollerButton-icon-160"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              class="Thumbnails-scroller-152"
              data-testid="thumbnail-scroller"
              style="margin-right: 0%;"
            >
              <button
                class="MuiButtonBase-root Thumbnails-thumbnail-153 Thumbnail-root-161 Thumbnail-selected-163 Thumbnail-large-164 Thumbnail-selected-163"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"undefined\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg\\"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <img
                  class="Media-root-144"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
              </button>
              <button
                class="MuiButtonBase-root Thumbnails-thumbnail-153 Thumbnail-root-161 Thumbnail-large-164"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"undefined\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg\\"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <img
                  class="Media-root-144"
                  src="https://bmipimngqa.azureedge.net/sys-master-hybris-media/hcd/h0e/8974987690014/TBK-SN-403-Tjpg"
                />
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root Thumbnails-thumbnail-153 Thumbnail-root-161 Thumbnail-large-164"
                data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"test video\\",\\"action\\":\\"[object Object]\\"}"
                data-testid="default-thumbnail"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root Thumbnail-playIcon-166"
                  data-testid="thumbnail-play-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 5v14l11-7z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-109 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ProductOverviewPane-root-123"
        >
          <h1
            class="MuiTypography-root ProductOverviewPane-heading-125 Typography-root-136 MuiTypography-h3"
            data-testid="typography"
          >
            name
          </h1>
          <ul
            class="ProductOverviewPane-attributes-126"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductOverview component renders with default image if there are no images, videos nor visualiser media 1`] = `
<div>
  <div
    class="ProductOverview"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root Grid-item-1 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-8"
      >
        <div
          class="MediaGallery-root-3"
        >
          <div
            class="MediaGallery-imageWrapper-4"
          >
            <svg
              class="MediaGallery-mainImageWrapper-7 MediaGallery-mainImageWrappershort-10 Media-root-42 Media-contain-43"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-1 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-4"
      >
        <div
          class="ProductOverviewPane-root-15"
        >
          <h1
            class="MuiTypography-root ProductOverviewPane-heading-17 Typography-root-28 MuiTypography-h3"
            data-testid="typography"
          >
            name
          </h1>
          <ul
            class="ProductOverviewPane-attributes-18"
          />
          <div>
            block
          </div>
          <p>
            text
          </p>
        </div>
        <p
          class="MuiTypography-root keyAssetTypesDownload Typography-root-28 MuiTypography-body1"
          data-testid="typography"
        >
          This site is protected by reCAPTCHA and the Google 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-36 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/privacy"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Privacy Policy
            </span>
          </a>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-36 Anchorlink MuiTypography-colorPrimary"
            href="https://policies.google.com/terms"
            rel="noreferrer noopener"
            target="_blank"
          >
            <span>
              Terms of Service
            </span>
          </a>
           apply.
        </p>
      </div>
    </div>
  </div>
</div>
`;
